--- a/ArticlesApp/ArticlesApp/Views/ViewInterest.xaml
+++ b/ArticlesApp/ArticlesApp/Views/ViewInterest.xaml
@@ -1,12 +1,66 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ArticlesApp.Views.ViewInterest">
+             x:Class="ArticlesApp.Views.ViewInterest"
+             xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
+                          xmlns:local="clr-namespace:ArticlesApp.Renderer"
+ NavigationPage.IconColor="Black">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout BackgroundColor="White" Padding="10,0,10,0">
+
+            <Grid Padding="10,0,10,25">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="55*" />
+                    <ColumnDefinition Width="45*"/>
+                </Grid.ColumnDefinitions>
+                <StackLayout Grid.Column="0">
+                    <Label Text="{Binding Interest.InterestName}" TextColor="#12121D" FontSize="25" FontAttributes="Bold" FontFamily="Roboto"/>
+                    <Label Text="{Binding Interest.ArticleInterestTypes.Count, StringFormat='Articles:{0}'}" FontSize="Body"   FontFamily="Roboto"/>
+                    <Label Text="{Binding Interest.FollwedInterests.Count, StringFormat='Following:{0}'}" FontSize="Body"   FontFamily="Roboto"/>
+
+                </StackLayout>
+                <local:ButtonNoPadding Margin="0,15,0,0" Command="{Binding ButtonPress}" VerticalOptions="Center" WidthRequest="50" Text="{Binding ButtonText}" TextColor="{Binding ButtonTextColor}" BackgroundColor="{Binding ButtonBackgroundColor}" Grid.Column="1"/>
+            </Grid>
+
+            <CollectionView SelectionChanged="colview_SelectionChanged"  SelectionMode="Single" x:Name="colview" ItemsSource="{Binding articles}"  Margin="-10,0,-10,0"  >
+
+                <CollectionView.ItemsLayout>
+                    <GridItemsLayout  Orientation="Vertical"
+                        Span="2"
+                        VerticalItemSpacing="20" HorizontalItemSpacing="0" 
+                                      />
+
+
+
+                </CollectionView.ItemsLayout>
+
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout Padding="10,0,10,0">
+                            <yummy:PancakeView Border="{yummy:BorderMarkup Color={Binding diviedColor}, Thickness='1'}" WidthRequest="{Binding Source={x:Reference colview},Path=BindingContext.PageWidth}"  HeightRequest="220" Margin="0,0,0,0" Padding="0,0,0,0">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="15*" />
+                                        <RowDefinition Height="60*" />
+                                        <RowDefinition Height="15*" />
+                                        <RowDefinition Height="10*" />
+
+                                    </Grid.RowDefinitions>
+                                    <Label HorizontalOptions="Center" VerticalOptions="Center" Text="{Binding Article.ArticleName}" Grid.Row="0" Grid.ColumnSpan="2" TextColor="#12121D" FontSize="20" FontAttributes="Bold" FontFamily="Roboto"/>
+                                    <Image HorizontalOptions="Center"  Source="{Binding PhotoUrl, Converter={StaticResource ImageSourceConverter}}" Grid.Row="1" Grid.ColumnSpan="2"/>
+                                    <Label Padding="5,0,0,0"   Text="{Binding Article.Description}" Grid.Row="2" Grid.ColumnSpan="2"/>
+                                    <Label  Grid.Row="3" Grid.Column="0" Text="{Binding athours}"/>
+                                    <Label  Grid.Row="3" Grid.Column="1" Text="{Binding date}"/>
+                                </Grid>
+                            </yummy:PancakeView>
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
