--- a/ArticlesApp/ArticlesApp/Views/MainPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/MainPage.xaml
@@ -27,7 +27,7 @@
     <ContentView.Content>
        
             <AbsoluteLayout  >
-            <StackLayout AbsoluteLayout.LayoutBounds="0,0,500,50000" >
+            <StackLayout  AbsoluteLayout.LayoutBounds="0,0,500,50000" >
                 <Grid Padding="20,10,0,0" HorizontalOptions="StartAndExpand">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
@@ -41,8 +41,8 @@
                     <ImageButton Source="planeIcon.png" BackgroundColor="Transparent" HorizontalOptions="End" WidthRequest="35" Grid.Column="1" Grid.Row="0" VerticalOptions="CenterAndExpand"/>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Black" />
-                <ScrollView>
-                    <CollectionView x:Name="articles" Margin="0,-6,0,0"  SelectionChanged="articles_SelectionChanged" SelectionMode="Single" >
+                
+                    <CollectionView x:Name="articles" ItemsSource="{Binding Articles}" Margin="0,-6,0,0"  SelectionChanged="articles_SelectionChanged" SelectionMode="Single" >
                     <CollectionView.ItemsLayout>
                         <GridItemsLayout  Orientation="Vertical"  />
                     </CollectionView.ItemsLayout>
@@ -72,7 +72,7 @@
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
-                </ScrollView>
+                
             </StackLayout>
             <ImageButton AbsoluteLayout.LayoutBounds="317,500,65,65" BackgroundColor="Transparent" Clicked="ImageButton_Clicked" Source="buton.png"/>
         </AbsoluteLayout>
