--- a/ArticlesApp/ArticlesApp/Views/ViewUsers.xaml
+++ b/ArticlesApp/ArticlesApp/Views/ViewUsers.xaml
@@ -2,10 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ArticlesApp.Views.ViewUsers"
-             xmlns:local="clr-namespace:ArticlesApp.Renderer" NavigationPage.IconColor="Black" BackgroundColor="White"
+             xmlns:local="clr-namespace:ArticlesApp.Renderer" NavigationPage.IconColor="Black"  BackgroundColor="White"
              xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
                           xmlns:imagecirc="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin" 
 >
+    <NavigationPage.TitleView>
+        <Label x:Name="ti"  FontSize="35" FontAttributes="Bold" TextColor="Black"/>
+    </NavigationPage.TitleView>
     <ContentPage.Resources>
         <Style TargetType="yummy:PancakeView">
             <Setter Property="VisualStateManager.VisualStateGroups">
