--- a/ArticlesApp/ArticlesApp/Views/MainPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/MainPage.xaml
@@ -38,7 +38,7 @@
                         <ColumnDefinition Width="50"/>
                     </Grid.ColumnDefinitions>
                     <Label FontFamily="OldStandardTT" Text="ArtiFind"  FontSize="35" TextColor="#303985" Grid.Column="0" Grid.Row="0"/>
-                    <ImageButton Source="planeIcon.png" BackgroundColor="Transparent" HorizontalOptions="End" WidthRequest="35" Grid.Column="1" Grid.Row="0" VerticalOptions="CenterAndExpand"/>
+                    <ImageButton Source="" IsEnabled="False" BackgroundColor="Transparent" HorizontalOptions="End" WidthRequest="35" Grid.Column="1" Grid.Row="0" VerticalOptions="CenterAndExpand"/>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Black" />
                 
@@ -62,7 +62,7 @@
                                         
                                     </Grid.ColumnDefinitions>
                                       <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Source="{Binding PhotoUrl,Converter={StaticResource ImageSourceConverter} }"   />
-                                    <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Article.ArticleName}"  TextColor="Black" FontSize="20" FontAttributes="Bold"   Padding="10,7,0,0"/>
+                                    <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Article.ArticleName}"  TextColor="Black" FontSize="20" FontAttributes="Bold"   Padding="0,7,0,0"/>
                                     <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Article.Description}" />
                                     <Label Grid.Row="2" Grid.Column="1" Text="{Binding athours}"/>
                                     <Label Grid.Row="2" Grid.Column="2" Text="{Binding date}"/>
