--- a/ArticlesApp/ArticlesApp/Views/ProfilePage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/ProfilePage.xaml
@@ -98,11 +98,11 @@
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <StackLayout Padding="10,0,10,0">
-                                <yummy:PancakeView Border="{yummy:BorderMarkup Color={Binding diviedColor}, Thickness='1'}" WidthRequest="{Binding Source={x:Reference colview},Path=BindingContext.PageWidth}"  HeightRequest="220" Margin="0,0,0,0" Padding="0,0,0,0">
+                                <yummy:PancakeView Border="{yummy:BorderMarkup Color={Binding diviedColor}, Thickness='1'}" WidthRequest="{Binding Source={x:Reference colview},Path=BindingContext.PageWidth}"  HeightRequest="230" Margin="0,0,0,0" Padding="0,0,0,0">
                                     <Grid>
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*" />
-                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="60*" />
+                                            <ColumnDefinition Width="40*" />
                                         </Grid.ColumnDefinitions>
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="15*" />
@@ -111,7 +111,7 @@
                                             <RowDefinition Height="10*" />
 
                                         </Grid.RowDefinitions>
-                                        <Label HorizontalOptions="Center" VerticalOptions="Center" Text="{Binding Article.ArticleName}" Grid.Row="0" Grid.ColumnSpan="2" TextColor="#12121D" FontSize="20" FontAttributes="Bold" FontFamily="Roboto"/>
+                                        <Label HorizontalOptions="Center" VerticalOptions="Center" Text="{Binding Article.ArticleName}" Grid.Row="0" Grid.ColumnSpan="2" TextColor="#12121D" FontSize="15" FontAttributes="Bold" FontFamily="Roboto"/>
                                         <Image HorizontalOptions="Center"  Source="{Binding PhotoUrl, Converter={StaticResource ImageSourceConverter}}" Grid.Row="1" Grid.ColumnSpan="2"/>
                                         <Label Padding="5,0,0,0"   Text="{Binding Article.Description}" Grid.Row="2" Grid.ColumnSpan="2"/>
                                         <Label  Grid.Row="3" Grid.Column="0" Text="{Binding athours}"/>
